tests/compilefail47.out
[1mtests/compilefail47.pas:12:17: [0m[1m[91merror:[0m Cannot assign a value to the control variable 'i' of a 'for' statement
    12 | 				i := 0;